# rust-patterns

./: .gitignore  Cargo.toml  README.md
src/: implementations.rs  main.rs  patterns.rs
src/algorithms/: sort.rs
src/algorithms/sort/: heapsort.rs  insertionsort.rs  mergesort.rs  quicksort.rs  selectionsort.rs
src/implementations/: adapter.rs  observer.rs
src/patterns/: abstractfactory.rs  bridge.rs  builder.rs  decorator.rs  factory.rs  observer.rs  prototype.rs  singleton.rs
