[package]
name = "rust-patterns"
version = "0.1.0"
authors = ["Reza Alizadeh Majd <r.a.majd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"